fix accessibility texts contrasts

--- a/docs/.vuepress/override.styl
+++ b/docs/.vuepress/override.styl
@@ -3,6 +3,7 @@ $navbarHeight = 5rem
 $sidebarWidth = 20rem
 $contentWidth = 850px
 
+$accentColor = #10834A
 $codeBgColor = #f3f6fa
 
 .content p img:only-child
@@ -38,3 +39,8 @@ a.repo-link
     background-color: #ffffff22
     border-color: #ffffff22
     color: #fff
+
+// fix of accessibility contrasts
+.page-edit .last-updated .time {
+    color: #4e6e8e;
+}
